# apps/api/src/users/dto/delete-account.dto.ts
@@ -1,0 +1,8 @@
+import { createZodDto } from 'nestjs-zod';
+import { z } from 'zod';
+
+export const deleteAccountSchema = z.object({
+  confirm: z.literal(true),
+});
+
+export class DeleteAccountDto extends createZodDto(deleteAccountSchema) {}
